# opengl-task

./: CMakeLists.txt  glad.c  main.cpp  vcpkg.json
.github/workflows/: build.yml
glad/: glad.h
task1/: task1.cpp
task2/: task2.cpp
task3/: task3.cpp
task4/: task4.cpp
